--- a/templates/chart.html
+++ b/templates/chart.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src="http://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
+    <script src="https://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
     <title>chart</title>
    
         </head>
