--- a/templates/chart.html
+++ b/templates/chart.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="//d3js.org/d3.v5.min.js"></script>
-    <script src="//dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dimple/2.3.0/dimple.latest.js"></script>
     <title>chart</title>
    
         </head>
