--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Quiz 03</title>
+    <title>Quiz 04</title>
 </head>
 <body>
      <div class="container" id="container">
@@ -28,5 +28,17 @@
         <input type="submit" value="States Name">
         </form><br>
         </fieldset>    
+
+
+<fieldset>
+    <legend><h2>Input</h2><br></legend>
+    <br>
+        <form method="POST" action="/chart" enctype="multipart/form-data">
+        Text <input type="text" name="lat1">       
+        <input type="submit" value="value of N">
+        </form><br>
+        </fieldset>
+
+
 </body>
 </html>
