--- a/templates/index.html
+++ b/templates/index.html
@@ -33,9 +33,14 @@
 <fieldset>
     <legend><h2>Input</h2><br></legend>
     <br>
-        <form method="POST" action="/chart" enctype="multipart/form-data">
-        Text <input type="text" name="lat1">       
-        <input type="submit" value="value of N">
+        <form method="POST" action="/chart5" enctype="multipart/form-data">             
+        <input type="submit" value="5">
+        </form><br>
+        <form method="POST" action="/chart10" enctype="multipart/form-data">             
+        <input type="submit" value="10">
+        </form><br>
+        <form method="POST" action="/chart15" enctype="multipart/form-data">             
+        <input type="submit" value="15">
         </form><br>
         </fieldset>
 
