--- a/templates/index.html
+++ b/templates/index.html
@@ -33,17 +33,10 @@
 <fieldset>
     <legend><h2>Input</h2><br></legend>
     <br>
-        <form method="POST" action="/chart5" enctype="multipart/form-data">             
-        <input type="submit" value="5">
+        <form method="POST" action="/chart5" enctype="multipart/form-data">
+        Text <input type="text" name="nvalue">       
+        <input type="submit" value="value of N">
         </form><br>
-        <form method="POST" action="/chart10" enctype="multipart/form-data">             
-        <input type="submit" value="10">
-        </form><br>
-        <form method="POST" action="/chart15" enctype="multipart/form-data">             
-        <input type="submit" value="15">
-        </form><br>
-
-        
         </fieldset>
 
 
